--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
+		<li><a href="./">Inicio</a></li>
             <li><a href="http://www.movilh.cl/">Movilh</a></li>
             <li><a href="http://www.fundaciontriangulo.org/">Fundación Triangulo</a></li>
+		<li><a href="http://abelorian.github.io/nicolasysufamilia/comentarios.html">Comentar</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -91,6 +93,7 @@
 				<p><img class="img-responsive" src="assets/16.png" alt=""></p>
 
 				<p><bt>Ilustración: <a href="#">Roberto Armijo</a></bt> - <bt>Diseño: <a href="#">Gonzalo Velásquez</a></bt> - <bt>Textos: <a href="#">Leslie Nicholls, Ramón Gómez</a></bt> </p> <p> <bt>Diagramación Web: <a href="http://desarrollando.la">Desarrollando.la</a></bt></p>
+<p> <bt>Licencia: <a href="">Distribución gratuita. Prohibida la venta.</a></bt></p>
 			</div>
 		</div><!-- /row -->
 	</div><!-- /container -->
