--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<li><a href="./">Inicio</a></li>
             <li><a href="http://www.movilh.cl/">Movilh</a></li>
             <li><a href="http://www.fundaciontriangulo.org/">Fundación Triangulo</a></li>
-		<li><a href="http://abelorian.github.io/nicolasysufamilia/comentarios.html">Comentar</a></li>
+		<li><a href="./comentar.html">Comentar</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
