--- a/comentar.html
+++ b/comentar.html
@@ -79,6 +79,8 @@
 			<div class="fb-comments" data-href="http://abelorian.github.io/nicolasysufamilia/comentar.html" data-numposts="10" data-colorscheme="light"></div>
 
 				<p><bt>Ilustración: <a href="#">Roberto Armijo</a></bt> - <bt>Diseño: <a href="#">Gonzalo Velásquez</a></bt> - <bt>Textos: <a href="#">Leslie Nicholls, Ramón Gómez</a></bt> </p> <p> <bt>Diagramación Web: <a href="http://desarrollando.la">Desarrollando.la</a></bt></p>
+<p> <bt>Licencia: <a href="">Distribución gratuita. Prohibida la venta.</a></bt></p>
+<p> <bt>Disponible en GitHub: <a href="https://github.com/abelorian/nicolasysufamilia">Ver código fuente</a></bt></p>
 			</div>
 		</div><!-- /row -->
 	</div><!-- /container -->
