link a github index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:title" content="Nicolás y sus dos papás" />
 <meta property="og:type" content="website"> 
 <meta property="og:url" content="http://abelorian.github.io/nicolasysufamilia/"/> 
-<meta property="og:image" content="assets/1.png"> <meta property="og:site_name" content="desarrollando.la"/> 
+<meta property="og:image" content="assets/1.png"> <meta property="og:site_name" content="Nicolas y su familia"/> 
 <meta name="viewport" content="width=device-width"/>
     <link rel="shortcut icon" href="assets/favicon.ico">
 
