--- a/comentar.html
+++ b/comentar.html
@@ -53,10 +53,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-<li><a href="./">Inicio</a></li>
-            <li><a href="http://www.movilh.cl/">Movilh</a></li>
-            <li><a href="http://www.fundaciontriangulo.org/">Fundación Triangulo</a></li>
+		<li><a href="./">Inicio</a></li>
 		<li><a href="./comentar.html">Comentar</a></li>
+            <li><a href="http://www.movilh.cl/" target="_blank">Movilh</a></li>
+            <li><a href="http://www.fundaciontriangulo.org/" target="_blank">Fundación Triangulo</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -80,7 +80,7 @@ La presentación ha tenido un enorme impacto en la prensa chilena, decenas de bi
 							
 			<div class="fb-comments" data-href="http://abelorian.github.io/nicolasysufamilia/comentar.html" data-numposts="10" data-colorscheme="light"></div>
 
-				<p><bt>Ilustración: <a href="#">Roberto Armijo</a></bt> - <bt>Diseño: <a href="#">Gonzalo Velásquez</a></bt> - <bt>Textos: <a href="#">Leslie Nicholls, Ramón Gómez</a></bt> </p> <p> <bt>Diagramación Web: <a href="http://desarrollando.la">Desarrollando.la</a></bt></p>
+				<p><bt>Ilustración: <a href="#">Roberto Armijo</a></bt> - <bt>Diseño: <a href="#">Gonzalo Velásquez</a></bt> - <bt>Textos: <a href="#">Leslie Nicholls, Ramón Gómez</a></bt> </p> <p> <bt>Diagramación Web: <a href="http://desarrollando.la" target="_blank">Desarrollando.la</a></bt></p>
 <p> <bt>Licencia: <a href="">Distribución gratuita. Prohibida la venta.</a></bt></p>
 <p> <bt>Disponible en GitHub: <a href="https://github.com/abelorian/nicolasysufamilia">Ver código fuente</a></bt></p>
 <div class="fb-like" data-href="http://abelorian.github.io/nicolasysufamilia/comentar.html" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
