--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
 		<li><a href="./">Inicio</a></li>
-            <li><a href="http://www.movilh.cl/">Movilh</a></li>
-            <li><a href="http://www.fundaciontriangulo.org/">Fundación Triangulo</a></li>
 		<li><a href="./comentar.html">Comentar</a></li>
+            <li><a href="http://www.movilh.cl/" target="_blank">Movilh</a></li>
+            <li><a href="http://www.fundaciontriangulo.org/" target="_blank">Fundación Triangulo</a></li>
+		
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -92,7 +93,7 @@
 				<p><img class="img-responsive" src="assets/15.png" alt=""></p>
 				<p><img class="img-responsive" src="assets/16.png" alt=""></p>
 
-				<p><bt>Ilustración: <a href="#">Roberto Armijo</a></bt> - <bt>Diseño: <a href="#">Gonzalo Velásquez</a></bt> - <bt>Textos: <a href="#">Leslie Nicholls, Ramón Gómez</a></bt> </p> <p> <bt>Diagramación Web: <a href="http://desarrollando.la">Desarrollando.la</a></bt></p>
+				<p><bt>Ilustración: <a href="#">Roberto Armijo</a></bt> - <bt>Diseño: <a href="#">Gonzalo Velásquez</a></bt> - <bt>Textos: <a href="#">Leslie Nicholls, Ramón Gómez</a></bt> </p> <p> <bt>Diagramación Web: <a href="http://desarrollando.la" target="_blank">Desarrollando.la</a></bt></p>
 <p> <bt>Licencia: <a href="">Distribución gratuita. Prohibida la venta.</a></bt></p>
 <p> <bt>Disponible en GitHub: <a href="https://github.com/abelorian/nicolasysufamilia">Ver código fuente</a></bt></p>
 <div class="fb-like" data-href="http://abelorian.github.io/nicolasysufamilia/comentar.html" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
