--- a/comentar.html
+++ b/comentar.html
@@ -80,7 +80,7 @@ La presentación ha tenido un enorme impacto en la prensa chilena, decenas de bi
 							
 			<div class="fb-comments" data-href="http://abelorian.github.io/nicolasysufamilia/comentar.html" data-numposts="10" data-colorscheme="light"></div>
 
-				<p><bt>Ilustración: <a href="#">Roberto Armijo</a></bt> - <bt>Diseño: <a href="#">Gonzalo Velásquez</a></bt> - <bt>Textos: <a href="#">Leslie Nicholls, Ramón Gómez</a></bt> </p> <p> <bt>Diagramación Web: <a href="http://desarrollando.la" target="_blank">Desarrollando.la</a></bt></p>
+				<p><bt>Ilustración: <a href="#">Roberto Armijo</a></bt> - <bt>Diseño: <a href="#">Gonzalo Velásquez</a></bt> - <bt>Textos: <a href="#">Leslie Nicholls, Ramón Gómez</a></bt> </p>
 <p> <bt>Licencia: <a href="">Distribución gratuita. Prohibida la venta.</a></bt></p>
 <p> <bt>Disponible en GitHub: <a href="https://github.com/abelorian/nicolasysufamilia">Ver código fuente</a></bt></p>
 <div class="fb-like" data-href="http://abelorian.github.io/nicolasysufamilia/comentar.html" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
